--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -80,6 +80,12 @@ jobs:
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_ENV
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_OUTPUT
 
+      - name: Set environment variables for build
+        run: |
+          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
+          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
+          echo "KEY_ALIAS_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}" >> $GITHUB_ENV
+
       - name: Install Node.js Packages
         run: npm install
 
@@ -92,15 +98,38 @@ jobs:
       - name: Run npm build paid release apk
         run: |
           node utils/storage_manager.mjs y
-          npm run build paid release apk
-          mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
+          # 导出环境变量供 build.json 使用
+          export KEYSTORE_PASSWORD="${{ secrets.KEYSTORE_PASSWORD }}"
+          export KEY_ALIAS="${{ secrets.KEY_ALIAS }}"
+          export KEY_ALIAS_PASSWORD="${{ secrets.KEY_ALIAS_PASSWORD }}"
+          
+          # 方法1：使用 Cordova 直接构建（推荐）
+          echo "Building release APK with Cordova..."
+          cordova build android --release -- --packageType=apk
+          
+          # 方法2：或者使用 npm 脚本但确保传递正确参数
+          # npm run build paid apk release
+          
+          # 检查生成的 APK 文件
+          ls -la platforms/android/app/build/outputs/apk/release/
+          
+          # 复制 APK 文件
+          cp platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
+          echo "APK built and copied to /tmp/app-release-normal.apk"
           echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
+          
+      # - name: Run npm build paid release apk
+      #   run: |
+      #     node utils/storage_manager.mjs y
+      #     npm run build paid release apk
+      #     mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
+      #     echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
            
-      - name: Run npm build paid release apk fdroid (for F-Droid)
-        run: |
-          node utils/storage_manager.mjs y
-          npm run build paid release apk fdroid
-          mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk
+      # - name: Run npm build paid release apk fdroid (for F-Droid)
+      #   run: |
+      #     node utils/storage_manager.mjs y
+      #     npm run build paid release apk fdroid
+      #     mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk
       
       - name: Remove keystore and build.json
         run: |
@@ -112,7 +141,7 @@ jobs:
         run: |
           echo "Prepared release assets for GitHub release"
           echo "NORMAL_APK_PATH=/tmp/app-release-normal.apk" >> $GITHUB_OUTPUT
-          echo "FDROID_APK_PATH=/tmp/app-release-fdroid.apk" >> $GITHUB_OUTPUT
+          # echo "FDROID_APK_PATH=/tmp/app-release-fdroid.apk" >> $GITHUB_OUTPUT
       
       - name: Create GitHub release with APK
         id: release_normal
@@ -121,6 +150,6 @@ jobs:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
             /tmp/app-release-normal.apk
-            /tmp/app-release-fdroid.apk
+            # /tmp/app-release-fdroid.apk
           draft: false
           prerelease: false
