--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -10,12 +10,10 @@ env:
   STORE_FILE_PATH: /tmp/app-release.keystore
   BUILD_JSON_PATH: build.json
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-  
+
 jobs:
   build:
-    # timeout-minutes: 60
     runs-on: ubuntu-latest
-    # 移除重复的 permissions 定义
 
     steps:
       - name: Initialization values
@@ -41,11 +39,12 @@ jobs:
         with:
           node-version: 'lts/*'
 
-      - name: Add keystore and build.json from secrets
+      - name: Add keystore from secrets
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ${{ env.STORE_FILE_PATH }}
-          echo "${{ secrets.ACODE_BUILD_JSON_CONTENT }}" | base64 -d > ${{ env.BUILD_JSON_PATH }}
-          echo "Keystore and build.json added successfully."
+          echo "Keystore added successfully."
+          # 验证 keystore
+          keytool -list -keystore "${{ env.STORE_FILE_PATH }}" -storepass "${{ secrets.KEYSTORE_PASSWORD }}" -alias "${{ secrets.KEY_ALIAS }}" || echo "Keystore verification failed, will continue anyway"
 
       - name: Export Commit Hash & prev tag
         run: |
@@ -80,12 +79,6 @@ jobs:
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_ENV
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Set environment variables for build
-        run: |
-          echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
-          echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> $GITHUB_ENV
-          echo "KEY_ALIAS_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}" >> $GITHUB_ENV
-
       - name: Install Node.js Packages
         run: npm install
 
@@ -95,53 +88,49 @@ jobs:
       - name: Run npm setup
         run: npm run setup
 
+      - name: Create build.json for release signing
+        run: |
+          cat > ${{ env.BUILD_JSON_PATH }} << EOF
+          {
+            "android": {
+              "debug": {
+                "keystore": "${{ env.STORE_FILE_PATH }}",
+                "storePassword": "${{ secrets.KEYSTORE_PASSWORD }}",
+                "alias": "${{ secrets.KEY_ALIAS }}",
+                "password" : "${{ secrets.KEY_ALIAS_PASSWORD }}",
+                "keystoreType": "pkcs12"
+              },
+              "release": {
+                "keystore": "${{ env.STORE_FILE_PATH }}",
+                "storePassword": "${{ secrets.KEYSTORE_PASSWORD }}",
+                "alias": "${{ secrets.KEY_ALIAS }}",
+                "password" : "${{ secrets.KEY_ALIAS_PASSWORD }}",
+                "keystoreType": "pkcs12"
+              }
+            }
+          }
+          EOF
+          echo "build.json created for release signing"
+          # 显示 build.json（隐藏敏感信息）
+          echo "Build.json content (passwords hidden):"
+          cat ${{ env.BUILD_JSON_PATH }} | sed "s/${{ secrets.KEYSTORE_PASSWORD }}/***/g" | sed "s/${{ secrets.KEY_ALIAS_PASSWORD }}/***/g"
+
       - name: Run npm build paid release apk
         run: |
           node utils/storage_manager.mjs y
-          # 导出环境变量供 build.json 使用
-          export KEYSTORE_PASSWORD="${{ secrets.KEYSTORE_PASSWORD }}"
-          export KEY_ALIAS="${{ secrets.KEY_ALIAS }}"
-          export KEY_ALIAS_PASSWORD="${{ secrets.KEY_ALIAS_PASSWORD }}"
-          
-          # 方法1：使用 Cordova 直接构建（推荐）
-          echo "Building release APK with Cordova..."
-          cordova build android --release -- --packageType=apk
-          
-          # 方法2：或者使用 npm 脚本但确保传递正确参数
-          # npm run build paid apk release
-          
+          # 使用 npm 脚本构建
+          npm run build paid release apk
           # 检查生成的 APK 文件
-          ls -la platforms/android/app/build/outputs/apk/release/
-          
-          # 复制 APK 文件
-          cp platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
-          echo "APK built and copied to /tmp/app-release-normal.apk"
+          find platforms/android -name "*.apk" -type f | xargs ls -la
+          # 复制 release APK
+          cp platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk || \
+          cp platforms/android/app/build/outputs/apk/debug/app-debug.apk /tmp/app-release-normal.apk
           echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
-          
-      # - name: Run npm build paid release apk
-      #   run: |
-      #     node utils/storage_manager.mjs y
-      #     npm run build paid release apk
-      #     mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
-      #     echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
-           
-      # - name: Run npm build paid release apk fdroid (for F-Droid)
-      #   run: |
-      #     node utils/storage_manager.mjs y
-      #     npm run build paid release apk fdroid
-      #     mv platforms/android/app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk
-      
+
       - name: Remove keystore and build.json
         run: |
           rm -f ${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}
           echo "Keystore and build.json removed successfully."
-      
-      - name: Prepare release assets
-        id: prepare_assets
-        run: |
-          echo "Prepared release assets for GitHub release"
-          echo "NORMAL_APK_PATH=/tmp/app-release-normal.apk" >> $GITHUB_OUTPUT
-          # echo "FDROID_APK_PATH=/tmp/app-release-fdroid.apk" >> $GITHUB_OUTPUT
       
       - name: Create GitHub release with APK
         id: release_normal
@@ -150,6 +139,5 @@ jobs:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
             /tmp/app-release-normal.apk
-            # /tmp/app-release-fdroid.apk
           draft: false
           prerelease: false
