--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -1,4 +1,6 @@
-name: build-acode
+
+name: build-acode-debug
+# 如何构建release版本，还没有琢磨出来
 
 on:
   workflow_dispatch:
@@ -104,18 +106,19 @@ jobs:
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew assembleRelease
-          mv app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
+          # mv app/build/outputs/apk/release/app-release.apk /tmp/app-release-normal.apk
+          mv app/build/outputs/apk/debug/app-debug.apk /tmp/app-debug-normal.apk
           echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
            
-      - name: Run npm build paid release apk fdroid (for F-Droid)
-        run: |
-          node utils/storage_manager.mjs y
-          # 确保使用release构建
-          npm run build paid release apk fdroid -- --release
-          # 显式调用Gradle release构建
-          cd platforms/android
-          ./gradlew assembleRelease
-          mv app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk
+      # - name: Run npm build paid release apk fdroid (for F-Droid)
+      #   run: |
+      #     node utils/storage_manager.mjs y
+      #     # 确保使用release构建
+      #     npm run build paid release apk fdroid -- --release
+      #     # 显式调用Gradle release构建
+      #     cd platforms/android
+      #     ./gradlew assembleRelease
+      #     mv app/build/outputs/apk/release/app-release.apk /tmp/app-release-fdroid.apk
       
       - name: Remove keystore and build.json
         run: |
@@ -135,7 +138,8 @@ jobs:
         with:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
-            /tmp/app-release-normal.apk
-            /tmp/app-release-fdroid.apk
+            /tmp/app-debug-normal.apk
+            # /tmp/app-release-normal.apk
+            # /tmp/app-release-fdroid.apk
           draft: false
           prerelease: false
