--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -129,17 +129,21 @@ jobs:
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew assembleRelease
+          
+          ls app/build/outputs/apk/release/*.apk
+          ls app/build/outputs/apk/*.apk
+          
           # 检查APK文件是否存在
-          if [ -f app/build/outputs/apk/release/*.apk ]; then
-            mv app/build/outputs/apk/release/*.apk /tmp/acode-release-normal.apk
-          elif [ -f app/build/outputs/apk/*.apk ]; then
-            mv app/build/outputs/apk/*.apk /tmp/acode-release-normal.apk
-          else
-            echo "Error: Release APK not found in expected locations!"
-            ls -la app/build/outputs/apk/
-            exit 1
-          fi
-          echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
+          # if [ -f app/build/outputs/apk/release/*.apk ]; then
+          #   mv app/build/outputs/apk/release/*.apk /tmp/acode-release-normal.apk
+          # elif [ -f app/build/outputs/apk/*.apk ]; then
+          #   mv app/build/outputs/apk/*.apk /tmp/acode-release-normal.apk
+          # else
+          #   echo "Error: Release APK not found in expected locations!"
+          #   ls -la app/build/outputs/apk/
+          #   exit 1
+          # fi
+          # echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
            
       # - name: Run npm build paid release apk fdroid (for F-Droid)
       #   run: |
