--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -7,13 +7,12 @@ permissions:
   contents: write
 
 env:
-  STORE_FILE_PATH: /tmp/app-release.keystore
-  BUILD_JSON_PATH: build.json
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  BUILD_JSON_PATH: build.json
+  STORE_FILE_PATH: /tmp/app-release.keystore
   KEYSTORE_PASSWORD: ${{secrets.KEYSTORE_PASSWORD}}
   KEY_ALIAS: ${{secrets.KEY_ALIAS}}
   KEY_PASSWORD: ${{secrets.KEY_PASSWORD}}
-
 
 jobs:
   build:
@@ -129,41 +128,22 @@ jobs:
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew assembleRelease
+          mv app/build/outputs/apk/release/app-release-unsigned.apk /tmp/acode-release-unsigned.apk
           
-          ls app/build/outputs/apk/release/*.apk
-          ls app/build/outputs/apk/*.apk
-          
-          # 检查APK文件是否存在
-          # if [ -f app/build/outputs/apk/release/*.apk ]; then
-          #   mv app/build/outputs/apk/release/*.apk /tmp/acode-release-normal.apk
-          # elif [ -f app/build/outputs/apk/*.apk ]; then
-          #   mv app/build/outputs/apk/*.apk /tmp/acode-release-normal.apk
-          # else
-          #   echo "Error: Release APK not found in expected locations!"
-          #   ls -la app/build/outputs/apk/
-          #   exit 1
-          # fi
-          # echo "VERSION: ${{ env.UPDATED_VERSION }}" >> $GITHUB_STEP_SUMMARY
+      - name: Sign the apk
+        run: |
+          # 确保 Android build-tools 在 PATH 中（根据你的 runner 环境可能需要调整）
+          # export PATH="$PATH:/usr/local/lib/android/sdk/build-tools/35.0.0"  # 根据实际版本调整
+          # 使用 apksigner 对 APK 签名
+          apksigner sign \
+            --ks "${{ env.STORE_FILE_PATH }}" \
+            --ks-pass "pass:${{ env.KEYSTORE_PASSWORD }}" \
+            --key-pass "pass:${{ env.KEY_PASSWORD }}" \
+            --ks-key-alias "${{ env.KEY_ALIAS }}" \
+            /tmp/acode-release-unsigned.apk
+          apksigner verify /tmp/acode-release-unsigned.apk
+          mv /tmp/acode-release-unsigned.apk "/tmp/acode-${BUILD_DATE}.apk"
            
-      # - name: Run npm build paid release apk fdroid (for F-Droid)
-      #   run: |
-      #     node utils/storage_manager.mjs y
-      #     # 确保使用release构建
-      #     npm run build paid release apk fdroid -- --release
-      #     # 显式调用Gradle release构建
-      #     cd platforms/android
-      #     ./gradlew assembleRelease
-      #     # 检查APK文件是否存在
-      #     if [ -f app/build/outputs/apk/release/app-fdroid.apk ]; then
-      #       mv app/build/outputs/apk/release/app-fdroid.apk /tmp/acode-release-fdroid.apk
-      #     elif [ -f app/build/outputs/apk/app-fdroid.apk ]; then
-      #       mv app/build/outputs/apk/app-fdroid.apk /tmp/acode-release-fdroid.apk
-      #     else
-      #       echo "Error: Release APK not found in expected locations!"
-      #       ls -la app/build/outputs/apk/
-      #       exit 1
-      #     fi
-      
       - name: Remove keystore and build.json
         run: |
           rm -f ${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}
@@ -176,13 +156,12 @@ jobs:
           echo "NORMAL_APK_PATH=/tmp/acode-release-normal.apk" >> $GITHUB_OUTPUT
           # echo "FDROID_APK_PATH=/tmp/acode-release-fdroid.apk" >> $GITHUB_OUTPUT
       
-      - name: Create GitHub release with APK
+      - name: Create GitHub release with apk
         id: release_normal
         uses: softprops/action-gh-release@master
         with:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
-            /tmp/acode-release-normal.apk
-            # /tmp/acode-release-fdroid.apk
+            "/tmp/acode-${BUILD_DATE}.apk"
           draft: false
           prerelease: false
