--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -123,12 +123,11 @@ jobs:
       - name: Run npm build paid release apk
         run: |
           node utils/storage_manager.mjs y
-          # 确保使用release构建
-          npm run build paid release apk
+          npm run build paid prod apk
           # 显式调用Gradle release构建
           cd platforms/android
           ./gradlew assembleRelease
-          # ls app/build/outputs/apk/release/*.apk
+          ls app/build/outputs/apk/release/*.apk
           # ls app/build/outputs/apk/*.apk
           mv app/build/outputs/apk/release/app-release-unsigned.apk /tmp/acode-unsigned.apk
           
