--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -19,22 +19,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Initialization values
-        run: |
-          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          echo "GIT_COMMIT=$(git rev-parse HEAD)" >> $GITHUB_ENV
-          echo "PREV_TAG=$(git describe --tags --abbrev=0 || git rev-list --max-parents=0 HEAD)" >> $GITHUB_ENV
-
       - name: Checkout Source repo
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           repository: Acode-Foundation/Acode
           ref: main
 
+      - name: Initialization values
+        run: |
+          # 先获取当前commit信息
+          echo "GIT_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || git rev-list --max-parents=0 HEAD)" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+
       - name: Fix build-extras.gradle for release build
         run: |
-          # 替换为正确语法的 build-extras.gradle
           cat > build-extras.gradle << 'EOF'
           android {
               compileSdkVersion 35
@@ -60,25 +60,27 @@ jobs:
           EOF
 
       - name: Set up Java 21
-        uses: actions/setup-java@main
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
 
       - name: Set up Node.js
-        uses: actions/setup-node@main
+        uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Add keystore and build.json from secrets
         run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ${{ env.STORE_FILE_PATH }}
-          echo "${{ secrets.ACODE_BUILD_JSON_CONTENT }}" | base64 -d > ${{ env.BUILD_JSON_PATH }}
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > "${{ env.STORE_FILE_PATH }}"
+          echo "${{ secrets.ACODE_BUILD_JSON_CONTENT }}" | base64 -d > "${{ env.BUILD_JSON_PATH }}"
           echo "Keystore and build.json added successfully."
           # 验证keystore密码
-          echo "${{ env.KEYSTORE_PASSWORD }}" > /tmp/keystore_password.txt
-          keytool -list -keystore ${{ env.STORE_FILE_PATH }} -storepass "$(cat /tmp/keystore_password.txt)" -v || {
+          keytool -list -keystore "${{ env.STORE_FILE_PATH }}" -storepass "${{ env.KEYSTORE_PASSWORD }}" -v || {
             echo "Keystore password verification failed!"
             exit 1
           }
@@ -100,7 +102,14 @@ jobs:
       - name: Append Commit Hash to Version and Update config.xml
         id: update-version
         run: |
-          SHORT_COMMIT_HASH=$(echo "${{ env.GIT_COMMIT }}" | cut -c 1-7)
+          # 确保GIT_COMMIT不为空
+          if [ -z "${{ env.GIT_COMMIT }}" ]; then
+            echo "GIT_COMMIT is empty, using default"
+            SHORT_COMMIT_HASH="unknown"
+          else
+            SHORT_COMMIT_HASH=$(echo "${{ env.GIT_COMMIT }}" | cut -c 1-7)
+          fi
+          
           UPDATED_VERSION="${{ steps.extract_version.outputs.VERSION }}-$SHORT_COMMIT_HASH"
           echo "Updated Version: $UPDATED_VERSION"
           
@@ -124,38 +133,84 @@ jobs:
         run: |
           node utils/storage_manager.mjs y
           npm run build paid apk
-          # 显式调用Gradle release构建
+          
+      - name: Build Release APK with Gradle
+        run: |
           cd platforms/android
           ./gradlew clean
           ./gradlew assembleRelease
-          ls app/build/outputs/apk/release/*.apk
-          mv app/build/outputs/apk/release/app-release-unsigned.apk /tmp/acode-unsigned.apk
           
+          # 查找生成的APK文件
+          echo "Looking for APK files..."
+          find app/build/outputs/apk -name "*.apk" -type f
+          
+          # 确保目录存在
+          mkdir -p /tmp
+          
+          # 复制release APK到临时目录
+          if [ -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
+            echo "Found unsigned release APK"
+            cp app/build/outputs/apk/release/app-release-unsigned.apk /tmp/acode-unsigned.apk
+            echo "Copied to /tmp/acode-unsigned.apk"
+          else
+            echo "Checking for signed APK..."
+            # 尝试查找已签名的APK
+            for apk in app/build/outputs/apk/release/*.apk; do
+              if [[ "$apk" != *"unsigned"* ]] && [[ -f "$apk" ]]; then
+                echo "Found signed APK: $apk"
+                cp "$apk" /tmp/acode-unsigned.apk
+                echo "Copied to /tmp/acode-unsigned.apk"
+                break
+              fi
+            done
+          fi
+          
+          # 验证APK文件存在
+          ls -la /tmp/acode-unsigned.apk || echo "APK file not found!"
+
       - name: Sign the apk (PKCS12)
         run: |
-          # 确保 Android build-tools 在 PATH 中（根据你的 runner 环境可能需要调整）
-          export PATH="$PATH:/usr/local/lib/android/sdk/build-tools/35.0.0"  # 根据实际版本调整
-          # 使用 apksigner 对 APK 签名
+          # 设置Android build-tools路径
+          export ANDROID_HOME=/usr/local/lib/android/sdk
+          export PATH="$ANDROID_HOME/build-tools/35.0.0:$PATH"
+          
+          # 验证apksigner可用
+          which apksigner
+          apksigner --version
+          
+          echo "APK file size before signing:"
+          ls -lh /tmp/acode-unsigned.apk
+          
+          # 使用apksigner对APK签名
           apksigner sign \
             --ks "${{ env.STORE_FILE_PATH }}" \
             --ks-pass "pass:${{ env.KEYSTORE_PASSWORD }}" \
-            --key-pass "pass:${{ env.KEY_PASSWORD }}" \
             --ks-key-alias "${{ env.KEY_ALIAS }}" \
             --ks-type PKCS12 \
+            --out "/tmp/acode-${{ env.BUILD_DATE }}.apk" \
             /tmp/acode-unsigned.apk
-          apksigner verify /tmp/acode-unsigned.apk
-          mv /tmp/acode-unsigned.apk "/tmp/acode-${{ env.BUILD_DATE }}.apk"
-           
+            
+          echo "APK file size after signing:"
+          ls -lh "/tmp/acode-${{ env.BUILD_DATE }}.apk"
+          
+          # 验证签名
+          apksigner verify --verbose "/tmp/acode-${{ env.BUILD_DATE }}.apk"
+          
+          # 列出所有/tmp目录下的acode相关文件
+          echo "Files in /tmp directory:"
+          ls -la /tmp/acode-*
+
       - name: Remove keystore and build.json
         run: |
-          rm -f ${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}
+          rm -f "${{ env.STORE_FILE_PATH }}" "${{ env.BUILD_JSON_PATH }}"
           echo "Keystore and build.json removed successfully."
       
       - name: Create GitHub release with apk
-        uses: softprops/action-gh-release@master
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.BUILD_DATE }}-acode
           files: |
-            "/tmp/acode-${{ env.BUILD_DATE }}.apk"
+            /tmp/acode-${{ env.BUILD_DATE }}.apk
           draft: false
           prerelease: false
+          generate_release_notes: true
