--- a/.github/workflows/build-xed-editor.yml
+++ b/.github/workflows/build-xed-editor.yml
@@ -10,16 +10,15 @@ jobs:
       contents: write
 
     steps:
-      - name: Initialization values
-        run: |
-          echo "BUILD_DATE=$(date -u +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          echo "BUILD_DATE_UTC8=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          
       - name: Checkout Source repo
         uses: actions/checkout@main
         with:
           repository: Xed-Editor/Xed-Editor
           ref: main
+
+      - name: Initialization values
+        run: |
+          echo "BUILD_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
       - name: Set up JDK 21
         uses: actions/setup-java@main
