--- a/.github/workflows/build-termux.yml
+++ b/.github/workflows/build-termux.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Initialization values
         run: |
-          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          echo "BUILD_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
       - name: Decode Keystore
         run: |
