--- a/.github/workflows/build-media3-ffmpeg-decoder.yml
+++ b/.github/workflows/build-media3-ffmpeg-decoder.yml
@@ -54,7 +54,7 @@ jobs:
  
       - name: Initialization values
         run: |
-          echo "BV_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+          echo "BV_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
       - name: Setup JDK 21
         uses: actions/setup-java@main
