--- a/.github/workflows/build-materialfiles.yml
+++ b/.github/workflows/build-materialfiles.yml
@@ -12,20 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-    - name: Checkout Source repository 
+    - name: Checkout Source repository
       uses: actions/checkout@main
       with:
-        path: ./ci-repo
+        fetch-depth: 0
+        repository: zhanghai/MaterialFiles
+        ref: master
+        path: ./
+        # path: ./ci-repo
 
     - name: Initialization values
       run: |
         echo "BUILD_DATE=$(TZ=UTC+8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-    - name: Clone MaterialFiles source code
-      run: |
-        git clone --depth 1 --recurse-submodules https://github.com/xqqv5/MaterialFiles.git materialfiles-source
-      working-directory: ./
+    # - name: Clone MaterialFiles source code
+    #   run: |
+    #     git clone --depth 1 --recurse-submodules https://github.com/xqqv5/MaterialFiles.git materialfiles-source
+    #   working-directory: ./
 
     - name: Set up JDK 21
       uses: actions/setup-java@main
