--- a/.github/workflows/build-materialfiles.yml
+++ b/.github/workflows/build-materialfiles.yml
@@ -18,7 +18,7 @@ jobs:
         fetch-depth: 0
         repository: zhanghai/MaterialFiles
         ref: master
-        path: ./
+        path: ./materialfiles-source
         # path: ./ci-repo
 
     - name: Initialization values
