--- a/.github/workflows/build-frost819-bv.yml
+++ b/.github/workflows/build-frost819-bv.yml
@@ -123,6 +123,96 @@ jobs:
           echo "Gradle 版本信息:"
           ./gradlew --version
 
+      # ========== 新增步骤：处理外部 AkDanmaku 依赖 ==========
+      - name: Checkout and Build External AkDanmaku
+        working-directory: ./
+        run: |
+          echo "=== 1. 克隆 AkDanmaku 源码 ==="
+          # 使用深度克隆以加快速度
+          git clone --depth 1 https://github.com/KwaiAppTeam/AkDanmaku.git akdanmaku-source
+          
+          echo "=== 2. 编译 AkDanmaku 为 AAR ==="
+          cd akdanmaku-source
+          chmod +x gradlew
+          
+          echo "尝试构建 AkDanmaku..."
+          # 尝试通用的发布构建命令，如果失败则尝试指定模块
+          if ./gradlew assembleRelease --no-daemon --stacktrace 2>&1; then
+              echo "使用 'assembleRelease' 构建成功。"
+          elif ./gradlew :akdanmaku:assembleRelease --no-daemon --stacktrace 2>&1; then
+              echo "使用 ':akdanmaku:assembleRelease' 构建成功。"
+          else
+              echo "错误：未能成功构建 AkDanmaku。"
+              echo "项目结构："
+              find . -name "*.gradle*" -type f | head -10
+              exit 1
+          fi
+          
+          echo "=== 3. 定位并复制生成的 AAR 文件 ==="
+          # 在构建输出目录中查找 AAR
+          AAR_FILE=$(find . -name "*.aar" -path "*/release/*" 2>/dev/null | head -1)
+          if [ -z "$AAR_FILE" ]; then
+              # 如果没找到，尝试在其他常见位置查找
+              AAR_FILE=$(find . -name "*.aar" 2>/dev/null | head -1)
+          fi
+          
+          if [ -f "$AAR_FILE" ]; then
+              echo "找到 AAR 文件: $AAR_FILE"
+              # 在主项目内创建目录存放此 AAR
+              mkdir -p ../frost819-bv-source/libs/akdanmakuExternal
+              cp "$AAR_FILE" "../frost819-bv-source/libs/akdanmakuExternal/akdanmaku-release.aar"
+              echo "已复制 AAR 到: ../frost819-bv-source/libs/akdanmakuExternal/"
+          else
+              echo "警告：未找到生成的 AAR 文件。依赖可能通过其他方式提供。"
+              echo "构建输出目录内容："
+              find . -type d -name "outputs" -exec ls -la {} \; 2>/dev/null || true
+          fi
+
+      - name: Integrate AkDanmaku into Main Project
+        working-directory: ./frost819-bv-source
+        run: |
+          echo "=== 修改主项目依赖配置 ==="
+          
+          # 首先检查原始的依赖声明方式
+          echo "检测对 'akdanmaku' 的依赖声明..."
+          
+          # 情况 1: 检测是否为项目模块依赖（implementation(project(":akdanmaku"))）
+          if grep -q 'implementation(project(":akdanmaku"))' app/build.gradle.kts; then
+              echo "发现源码模块依赖: implementation(project(\":akdanmaku\"))"
+              echo "将为其添加备选的本地 AAR 依赖..."
+              # 在 dependencies 块末尾添加 AAR 依赖
+              if grep -q '^dependencies {' app/build.gradle.kts; then
+                  # 在 dependencies 块闭合前插入
+                  sed -i '/^dependencies {/,/^}/ { /^}/i\    // CI 集成的外部 AkDanmaku AAR\n    implementation(files("libs/akdanmakuExternal/akdanmaku-release.aar"))\n}' app/build.gradle.kts
+              else
+                  # 备用方案：直接在文件末尾添加
+                  echo -e '\n// CI 集成的外部 AkDanmaku AAR\nimplementation(files("libs/akdanmakuExternal/akdanmaku-release.aar"))' >> app/build.gradle.kts
+              fi
+          fi
+          
+          # 情况 2: 检测是否为版本目录别名依赖（implementation(libs.akdanmaku)）
+          if grep -q 'implementation(libs\.akdanmaku)' app/build.gradle.kts; then
+              echo "发现版本目录依赖: implementation(libs.akdanmaku)"
+              echo "将添加本地 AAR 依赖作为首要选择..."
+              # 在原有依赖行之前插入 AAR 依赖
+              sed -i '/implementation(libs\.akdanmaku)/i\    implementation(files("libs/akdanmakuExternal/akdanmaku-release.aar")) // CI 集成版本' app/build.gradle.kts
+          fi
+          
+          # 如果以上均未匹配，但存在 libs/akdanmakuExternal 目录，则主动添加依赖
+          if [ -d "libs/akdanmakuExternal" ] && [ -f "libs/akdanmakuExternal/akdanmaku-release.aar" ]; then
+              if ! grep -q 'akdanmakuExternal/akdanmaku-release.aar' app/build.gradle.kts; then
+                  echo "未检测到显式的 akdanmaku 依赖，但存在 AAR 文件，正在添加..."
+                  echo -e '\n// CI 集成的外部 AkDanmaku AAR\nimplementation(files("libs/akdanmakuExternal/akdanmaku-release.aar"))' >> app/build.gradle.kts
+              fi
+          fi
+          
+          echo "修改后的依赖相关部分预览："
+          grep -n -A2 -B2 "akdanmaku" app/build.gradle.kts || echo "（未找到 'akdanmaku' 关键字）"
+          
+          echo "当前 libs/ 目录内容："
+          ls -la libs/ || echo "libs/ 目录不存在"
+
+      # ========== 继续原有步骤 ==========
       - name: Decode and write release keystore
         working-directory: ./frost819-bv-source
         run: |
@@ -151,7 +241,7 @@ jobs:
       - name: Build release apk files
         working-directory: ./frost819-bv-source
         run: |
-          echo "=== 开始构建 ==="
+          echo "=== 开始构建 (已集成外部 AkDanmaku) ==="
           ./gradlew :app:assembleRelease --no-daemon --stacktrace
           
           echo ""
@@ -160,7 +250,8 @@ jobs:
             echo "  $(ls -lh "$apk")"
           done || echo "未找到APK文件，请检查构建日志。"
           
-          mv "frost819-bv-source/app/build/outputs/apk/default/release/*.apk" "frost819-bv-source/app/build/outputs/apk/default/release/f819bv-${{ env.BUILD_DATE }}.apk"
+          # 注意：这里的路径已移除开头的 frost819-bv-source/，因为 working-directory 已设置
+          mv "app/build/outputs/apk/default/release/"*.apk "app/build/outputs/apk/default/release/f819bv-${{ env.BUILD_DATE }}.apk" 2>/dev/null || echo "移动APK文件失败，可能文件名不匹配。"
  
       - name: Create github release & upload apk
         uses: softprops/action-gh-release@master
