--- a/.github/workflows/build-acode.yml
+++ b/.github/workflows/build-acode.yml
@@ -19,6 +19,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Clean runner environment
+        run: |
+          # 清理可能存在的全局缓存文件
+          rm -rf ~/.gradle/caches/transforms-*
+          rm -rf ~/.android/build-cache/
+
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
