--- a/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-bggrgjqaubcoe-piliplus.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
+      - name: Clean runner environment
+        run: |
+          # 清理可能存在的全局缓存文件
+          rm -rf ~/.gradle/caches/transforms-*
+          rm -rf ~/.android/build-cache/
+
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
