--- a/.github/workflows/build-frost819-bv.yml
+++ b/.github/workflows/build-frost819-bv.yml
@@ -14,6 +14,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Clean runner environment
+        run: |
+          # 清理可能存在的全局缓存文件
+          rm -rf ~/.gradle/caches/transforms-*
+          rm -rf ~/.android/build-cache/
+
       - name: Checkout source repo (frost819-bv)
         uses: actions/checkout@main
         with:
